--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
+html {
+  background-color: #222;
+}
+
+#root {
+  background-color: #222;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  background-color: #222;
+  padding-top: 20px;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #222;
+  color: #b30000;
+  font-family: "Barrio", cursive;
 }
 
-.App-link {
-  color: #61dafb;
+#game-speed {
+  color: #b30000;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cell {
+  height: 10px;
+  width: 10px;
+  border: 1px solid grey;
+  display: inline-block;
+  cursor: pointer;
+  margin: 0;
+  padding: 0;
+}
+
+.cell.alive {
+  background-color: #b3b300;
+}
+
+.cell.dead {
+  background-color: black;
+}
+
+.board-row {
+  height: 12px;
 }
